# flatpak-smoke

./: .gitignore  Cargo.toml  Containerfile  README.md
.github/workflows/: ci.yml
fixtures/minimal-wayland/: fixture.c  org.example.FlatpakSmokeFixture.yml
fixtures/minimal-x11/: fixture.c  org.example.FlatpakSmokeFixture.yml
src/: cli.rs  command.rs  installer.rs  lib.rs  main.rs  output.rs  result.rs  session.rs  tools.rs  verify.rs
tests/: cli.rs
