[package]
name = "flatpak-smoke"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "CI-friendly smoke verifier for freshly built Flatpak applications"

[dependencies]
aes = "0.8"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
libc = "0.2"
md-5 = "0.10"
num-bigint = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.12"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.12"
